fix:scrollbar

--- a/client/src/components/header/index.css
+++ b/client/src/components/header/index.css
@@ -13,3 +13,16 @@
     @apply absolute flex flex-col inset-0 z-[999]  top-[25%] justify-start gap-10 before:content-[''] before:fixed before:inset-0 
         before:backdrop-blur-lg dark:before:bg-black before:bg-white dark:before:bg-opacity-45 before:bg-opacity-20;
 }
+
+::-webkit-scrollbar {
+    @apply w-1 h-auto;
+    scroll-behavior: smooth;
+}
+
+::-webkit-scrollbar-track {
+    @apply bg-transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    @apply bg-gray-500 rounded-lg;
+}
